<resources>
    <string name="app_name">Ping (Android Studio Version)</string>
    <string name="start_service_label">Start Service</string>
    <string name="stop_service_label">Stop Service</string>
    <string name="send_text_label">Send Text</string>
    <string name="give_notification_label">Give Notification</string>
    <string name="channel_name">Ping Channel</string>
    <string name="channel_description">Channel for Ping notifications</string>
    <string name="status_label">Welcome to Ping.</string>
    <string name="service_is_running_message">Service is running.</string>
    <string name="service_is_stopped_message">Service is stopped.</string>
    <string name="ping_button_label">Choose Phone to Ping</string>
    <string name="ping_status_label_hint">Click the button above to ping another phone.</string>
    <string name="ping_request_sent_message">Ping request sent to %1$s.</string>
    <string name="button_whitelist_label">Choose Who can Ping Me</string>
    <string name="text_view_whitelist_text">The following phones can ping me:</string>
    <string name="button_add_label">Choose a Contact to Add</string>
    <string name="text_view_placeholder">555 1234</string>
    <string name="button_delete_label">Remove Selected Entry</string>
    <string name="button_clear_label">Remove All Entries</string>
    <string name="button_main_screen_label">Back to Main Screen</string>
    <string name="map_view_description">A map showing the location of the pinged phone.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="logging_header">Logging</string>

    <!-- Sync Preferences -->
    <string name="enable_logging_title">Enable logging</string>
    <string name="action_settings">Settings</string>
    <string name="log_files_title">Log Files</string>
    <string name="log_files_disabled">Logging is currently disabled. Enable this to help debug issues.</string>
    <string name="action_help">Help</string>
    <string name="action_logging">Logs (Debug)</string>
    <string name="help_contents">Ping Help</string>
    <!-- Link works but is printed verbatim. -->
    <!--    <string name="osm_copyright_text"><![CDATA[© <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors]]></string>-->
    <!-- Link looks fine but does not work. -->
    <string name="osm_copyright_text">© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors</string>
    <string name="action_location_history">Location History</string>
    <string name="export_location_history">Export Location History</string>
    <string name="email_exported_file">Email Exported File</string>
    <string name="delete_location_history">Delete Location History</string>
    <string name="title_activity_location_history">Location History</string>
    <string name="title_activity_logging">Logging</string>
    <string name="title_activity_whitelist">Contacts</string>
    <!--    <string name="osm_copyright_text">© &lt;a href="https://www.openstreetmap.org/copyright"&gt;OpenStreetMap&lt;/a&gt; contributors</string>-->
    <string name="button_view_logs_label">View Logs</string>
    <string name="edit_text_logs_hint">Click the button above to view the logs.</string>
    <string name="restart_service_label">Restart Service</string>
    <string name="expand_or_collapse_map">Expand or collapse map.</string>
    <string name="action_scheduled_ping">Scheduled Pings</string>
    <string name="title_activity_scheduled_ping">Scheduled Pings</string>
    <!-- Strings for timer. -->
    <string name="timer_line_1">Send a ping request to:</string>
    <string name="schedule_contact_label_default"><![CDATA[<Click the button to choose a contact>]]></string>
    <string name="schedule_button_choose_contact">Choose Contact</string>
    <string name="schedule_label_every">Every</string>
    <string name="label_schedule_interval_suffix">H/M/S</string>
    <string name="button_schedule_start_label">Start</string>
    <string name="button_schedule_restart_label">Restart</string>
    <string name="hour_separator">:</string>
    <string name="schedule_start_hour_description">Choose the starting hour.</string>
    <string name="schedule_start_minute_description">Choose the starting minute.</string>
    <string name="schedule_start_am_description">Choose start AM or PM.</string>
    <string name="label_schedule_until">Until:</string>
    <string name="choose_hour_description">Choose the hour.</string>
    <string name="choose_minute_description">Choose the minute.</string>
    <string name="choose_am">Choose AM or PM.</string>
    <string name="schedule_end_hour_description">Choose the end hour.</string>
    <string name="schedule_end_minute_description">Choose the end minute.</string>
    <string name="schedule_end_am_description">Choose the end time AM or PM.</string>
    <string name="button_stop_label">Stop</string>
    <string name="label_hint">Press \"Start\" to send scheduled ping requests.</string>
    <string name="label_ping_sent">Ping request sent at %1$s.</string>
    <string name="label_stopped">Stopped.</string>
    <string name="label_running">Running.</string>
    <string name="label_running_but_no_ping_sent_yet" />
    <string name="label_schedule_from">From:</string>
    <string name="label_time_left">Running. Next ping request in %1$s…</string>
    <string name="label_send_ping_to">Send a ping request to: %1$s</string>
    <string name="log_text_view_hint">The logs will show here.</string>
    <string name="ping_type_dialog_title">Choose Ping Type</string>
    <string name="ping_type_once">Once</string>
    <string name="ping_type_recurring">Recurring</string>
    <!--    <string name="button_clear_label">Clear</string>-->
</resources>