<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/action_logging"-->
<!--        android:orderInCategory="101"-->
<!--        android:title="@string/action_logging"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_location_history"
        android:orderInCategory="102"
        android:title="@string/action_location_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scheduled_ping"
        android:orderInCategory="103"
        android:title="@string/action_scheduled_ping"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="104"
        android:title="@string/action_help" />
</menu>