<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationHistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonExportLocationHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_location_history" />

        <Button
            android:id="@+id/buttonEmailExportedFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_exported_file" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/buttonDeleteLocationHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_location_history" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>